feat: finish score implementation
